swen430as1/tests/valid/Method_Valid_3.while
void nop() {
     // doesn't do anything!
}

int id(int x) {
    nop();
    return x;
}

void main() {
     assert id(1) == 1;
     assert id(-1) == -1;
}