swen430as1/tests/invalid/trycatch/TryCatch_Invalid_11.while
int f(int x) {
    //
    try {
        int r = 1;
    } catch(int r) {
        r = 1;
    }
    return r;
}